results/SpecGenBench/4-shot/log-IsOneBitCharacter-2023_11_05_03_18_24.txt
class IsOneBitCharacter {
    //@ requires \forall int i; 0 <= i && i < bits.length; bits[i] == 0 || bits[i] == 1;
    //@ ensures \result <==> i == bits.length - 1;
    public boolean isOneBitCharacter(int[] bits) {
        int n = bits.length, i = 0;
        //@ maintaining 0 <= i && i <= n - 1;
        //@ decreases n - i;
        while (i < n - 1) {
            i += bits[i] + 1;
        }
        return i == n - 1;
    }
}
/home/max/Documents/JMLGPT/tmp/IsOneBitCharacter.java:3: error: cannot find symbol
    //@ ensures \result <==> i == bits.length - 1;
                             ^
  symbol:   variable i
  location: class IsOneBitCharacter
1 error

